# task-tracker

./: db.sqlite3  pyproject.toml
core/: admin.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
task_tracker/: settings.py  urls.py
theme/templates/: base.html  kanban_template.html  kanban_templates.html  login.html  main.html  registration.html  specified_project.html
